[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/states/Options.gd" type="Script" id=1]

[node name="OptionsMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="C" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="V" type="VBoxContainer" parent="ColorRect/C"]
margin_left = 133.0
margin_top = 191.0
margin_right = 507.0
margin_bottom = 288.0
custom_constants/separation = 30

[node name="G" type="GridContainer" parent="ColorRect/C/V"]
margin_right = 374.0
margin_bottom = 42.0
custom_constants/hseparation = 25
columns = 3

[node name="Label" type="Label" parent="ColorRect/C/V/G"]
margin_right = 139.0
margin_bottom = 19.0
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="ColorRect/C/V/G"]
margin_left = 164.0
margin_right = 264.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicVolumeLabel" type="Label" parent="ColorRect/C/V/G"]
margin_left = 289.0
margin_right = 374.0
margin_bottom = 19.0
text = "100%"

[node name="Label2" type="Label" parent="ColorRect/C/V/G"]
margin_top = 23.0
margin_right = 139.0
margin_bottom = 42.0
text = "Animation Speed"

[node name="AnimationSpeedSlider" type="HSlider" parent="ColorRect/C/V/G"]
margin_left = 164.0
margin_top = 23.0
margin_right = 264.0
margin_bottom = 39.0
max_value = 4.0
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="AnimationSpeedLabel" type="Label" parent="ColorRect/C/V/G"]
margin_left = 289.0
margin_top = 23.0
margin_right = 374.0
margin_bottom = 42.0
rect_min_size = Vector2( 85, 0 )
text = "Normal"

[node name="BackButton" type="Button" parent="ColorRect/C/V"]
margin_left = 137.0
margin_top = 72.0
margin_right = 237.0
margin_bottom = 97.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
text = "Back"

[connection signal="value_changed" from="ColorRect/C/V/G/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="ColorRect/C/V/G/AnimationSpeedSlider" to="." method="_on_AnimationSpeedSlider_value_changed"]
[connection signal="pressed" from="ColorRect/C/V/BackButton" to="." method="_on_BackButton_pressed"]
